Added line breaks

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/Aurora text effect/index.html">Aurora Text Effect</a>
-    <a href="/scroll text using CSS/index.html">Scroll Text</a>
-    <a href="/bg color changer/Test.html">Background Color Chnager</a>
+    <a href="./Aurora text effect/index.html">Aurora Text Effect</a>
+    <br>
+    <a href="./scroll text using CSS/index.html">Scroll Text</a>
+    <br>
+    <a href="./bg color changer/Test.html">Background Color Chnager</a>
 </body>
 </html>
