--- a/scroll text using CSS/index.html
+++ b/scroll text using CSS/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="page">
-
-    </div>
     <div class="page center">
+        <h1>
+            Welcome
+        </h1>
+    </div>
+    <div class="page">
         <div class="scroll-reveal center ">
             <h2>Scroll Text</h2>
             <p><span>
@@ -18,9 +20,6 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet ad repudiandae consequuntur quaerat eveniet nisi esse tempora voluptatum, quo nesciunt sunt voluptate saepe est beatae delectus possimus. Ducimus, quia ipsam.
             </span></p>
         </div>
-    </div>
-    <div class="page">
-
     </div>
 </body>
 </html>
