--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="./scroll text using CSS/index.html">Scroll Text</a>
     <br>
     <a href="./bg color changer/Test.html">Background Color Chnager</a>
+    <br>
+    <a href="./dark mode/index.html">Dark Mode</a>
 </body>
 </html>
