--- a/dark mode/index.html
+++ b/dark mode/index.html
@@ -33,6 +33,8 @@
 			id="switch-icon"
 			onclick="ToggleDarkMode()"
 		></div>
-		<h1>Samriddh Verma</h1>
+		<main>
+			<h1>Samriddh Verma</h1>
+		</main>
 	</body>
 </html>
